Jdk25 (#33)
* Updates

* Updates github actions

* Copyright updates

* Update pom.xml

Removes kotlin and outdated libs

* Create module-info.java

* Updates

* Copyright updates

* Update BinaryGenerators.java

* Update BooleanGenerators.java

* Update Checks.java

* Update module-info.java

* Updates

* Refines

* Refines

* Update pom.xml

* Create ThrowingSupplier.java

* Java rewrite

* Update pom.xml

* Update BooleanGenerators.java

* Rewrites tests

* Renames test files to java

* Update Tests.java

* Update BinaryGeneratorsTest.java

* Update BooleanGeneratorsTest.java

* Update Throwables.java

* Update ChecksTest.java

* Removes old junit

* Updates

* Updates

* Updates

* Update DatesTest.java

* Update EnumGeneratorsTest.java

* Update GeolocationGeneratorsTest.java

* Update JavaCode.java

* Update Tests.java

* Update NetworkGeneratorsTest.java

* Update NumberGeneratorsTest.java

* Update PeopleGeneratorsTest.java

* Update PlaceGeneratorsTest.java

* Update TimeGeneratorsTest.java

* Update StringGeneratorsTest.java

* Fixes

* Reorganizes code

* Refines

* Refines

* Fixes

* Update CollectionGeneratorsTest.java

* Javadoc fixes

* Update pom.xml

* Update pom.xml

Removes outmoded dep

* Update pom.xml

* format fix

* Fixes typo

* Renames function

* Adds test case

* Adds 'negativeDoubles()' and test case

* Removes unused code

* Refines

* Refines

* Update src/main/java/tech/sirwellington/alchemy/generator/ObjectGenerators.java

* Refines

* Update ObjectGenerators.java

* Update pom.xml

Removes unused dep

* Update ObjectGenerators.java

* Refines

* Update ObjectGenerators.java

* Refines

* Update src/main/java/tech/sirwellington/alchemy/generator/ObjectGenerators.java

* Update ObjectGenerators.java

* Update ObjectGenerators.java

* Update pom.xml