@@ -1,22 +1,28 @@
 package tech.sirwellington.alchemy.generator;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.MessageFormat;
 import java.util.Arrays;
 import java.util.List;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import tech.sirwellington.alchemy.annotations.access.NonInstantiable;
 import tech.sirwellington.alchemy.annotations.arguments.NonEmpty;
 
+import static tech.sirwellington.alchemy.generator.AlchemyGenerator.Get.one;
 import static tech.sirwellington.alchemy.generator.Checks.checkNotEmpty;
 import static tech.sirwellington.alchemy.generator.Checks.checkThat;
 import static tech.sirwellington.alchemy.generator.NumberGenerators.integers;
+import static tech.sirwellington.alchemy.generator.PeopleGenerators.popularEmailDomains;
 import static tech.sirwellington.alchemy.generator.StringGenerators.alphanumericStrings;
 
 /**
- * Generators for Network-data, such as a IP Addresses.
+ * {@summary Generators for Network-data, such as an IP Addresses.}
+ *
  * @author SirWellington
  */
 @NonInstantiable
@@ -24,18 +30,18 @@ public final class NetworkGenerators {
     private static final Logger LOG = LoggerFactory.getLogger(NetworkGenerators.class);
     private static final URL FALLBACK_URL;
     private static final List<String> VALID_PROTOCOLS = Arrays.asList(
-            "http",
-            "https",
-            "ftp",
-            "file",
-            "ssh"
+        "http",
+        "https",
+        "ftp",
+        "file",
+        "ssh"
     );
 
     static {
         URL url;
         try {
-            url = new URL("https://google.com");
-        } catch (MalformedURLException e) {
+            url = new URI("https://google.com").toURL();
+        } catch (URISyntaxException | MalformedURLException _) {
             url = null;
         }
         FALLBACK_URL = url;
@@ -61,6 +67,7 @@ public final class NetworkGenerators {
 
     /**
      * Creates valid URLs starting with the provided protocol.
+     *
      * @param protocol The protocol to use for the URLs created. Do not include the "://".
      *                 Must be one of the common types, {@code http, https, ftp, ssh, file}.
      * @return {@link URL URLs} beginning with the {@code protocol}.
@@ -68,27 +75,26 @@ public final class NetworkGenerators {
     public static AlchemyGenerator<URL> urlsWithProtocol(@NonEmpty String protocol) {
         checkNotEmpty(protocol, "missing protocol");
         checkThat(
-                VALID_PROTOCOLS.contains(protocol),
-                MessageFormat.format("{0} is not a valid protocol [{1}]", protocol, VALID_PROTOCOLS)
+            VALID_PROTOCOLS.contains(protocol),
+            MessageFormat.format("{0} is not a valid protocol [{1}]", protocol, VALID_PROTOCOLS)
         );
 
-        String cleanProtocol = protocol.replace("://", "");
+        var cleanProtocol = protocol.replace("://", "");
         try {
-            new URL(cleanProtocol + "://");
-        } catch (MalformedURLException ex) {
+            new URI(cleanProtocol + "://example.com");
+        } catch (URISyntaxException  ex) {
             throw new IllegalArgumentException("Unknown protocol: " + protocol);
         }
 
         return () -> {
-            String url = MessageFormat.format(
-                    "{0}://{1}.{2}",
-                    cleanProtocol,
-                    alphanumericStrings().get(),
-                    PeopleGenerators.popularEmailDomains().get()
-            );
+            var hostLength = one(integers(3, 40));
+            var host = alphanumericStrings(hostLength);
+            var domain = one(popularEmailDomains());
+            var url = MessageFormat.format("{0}://{1}.{2}", cleanProtocol, host, domain);
+
             try {
-                return new URL(url);
-            } catch (MalformedURLException ex) {
+                return new URI(url).toURL();
+            } catch (URISyntaxException | MalformedURLException ex) {
                 LOG.error("Failed to create a url from scheme {}", cleanProtocol, ex);
                 return FALLBACK_URL;
             }
@@ -106,13 +112,13 @@ public final class NetworkGenerators {
      * Generates an IPv4 Address in the form {@code xxx.xxx.xxx.xxx}
      */
     public static AlchemyGenerator<String> ipv4Addresses() {
-        AlchemyGenerator<Integer> integers = integers(1, 1000);
+        var integers = integers(1, 1000);
         return () -> MessageFormat.format(
-                "{0}.{1}.{2}.{3}",
-                integers.get(),
-                integers.get(),
-                integers.get(),
-                integers.get()
+            "{0}.{1}.{2}.{3}",
+            integers.get(),
+            integers.get(),
+            integers.get(),
+            integers.get()
         );
     }
 }
